force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/KDCE_SurvyPerSubjectCode__c.object-meta.xml
<CustomObject>
    <label>Survey Per Subject Code</label>
    <nameField>
        <displayFormat>SSC-{0000}</displayFormat>
        <label>Survey Per Subject Code	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Per Subject Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>