force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/BrandNps__c.field-meta.xml
<CustomField>
    <fullName>BrandNps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>브랜드 NPS</description>
    <label>Brand NPS</label>
    <type>Checkbox</type>
</CustomField>