force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <description>사례 유형</description>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>