force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/CES__c.field-meta.xml
<CustomField>
    <fullName>CES__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CES</description>
    <label>CES</label>
    <type>Checkbox</type>
</CustomField>