force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/ChannelNps__c.field-meta.xml
<CustomField>
    <fullName>ChannelNps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>채널 NPS</description>
    <label>Channel NPS</label>
    <type>Checkbox</type>
</CustomField>