force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/ProgramNps__c.field-meta.xml
<CustomField>
    <fullName>ProgramNps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>프로그램 NPS</description>
    <label>Program NPS</label>
    <type>Checkbox</type>
</CustomField>