force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/SendOutPriority__c.field-meta.xml
<CustomField>
    <fullName>SendOutPriority__c</fullName>
    <description>발송 우선순위</description>
    <label>Send Out Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>