force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/SubjectCodeApi__c.field-meta.xml
<CustomField>
    <fullName>SubjectCodeApi__c</fullName>
    <description>서브젝트 코드 API</description>
    <label>Subject Code API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>