force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/SubjectCodeEng__c.field-meta.xml
<CustomField>
    <fullName>SubjectCodeEng__c</fullName>
    <description>서브젝트 코드(영문)</description>
    <label>Subject Code(eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>