force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/SubjectCodeKo__c.field-meta.xml
<CustomField>
    <fullName>SubjectCodeKo__c</fullName>
    <description>서브젝트 코드(한글)</description>
    <label>Subject Code(ko)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>