force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Per Subject Code</relationshipLabel>
    <relationshipName>Survey_Per_Subject_Code</relationshipName>
    <type>Lookup</type>
</CustomField>