force-app/main/default/objects/KDCE_SurvyPerSubjectCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>CaseType__c</columns>
    <columns>SubjectCodeKo__c</columns>
    <columns>SubjectCodeEng__c</columns>
    <columns>SubjectCodeApi__c</columns>
    <columns>SendOutPriority__c</columns>
    <columns>BrandNps__c</columns>
    <columns>ChannelNps__c</columns>
    <columns>CES__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>